--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-paginate": "^8.3.0",
+    "react-select": "^5.10.2",
     "use-debounce": "^10.0.6",
     "yup": "^1.7.1",
     "zustand": "^5.0.9"
