--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "formik": "^2.4.9",
+    "modern-normalize": "^3.0.1",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
