--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.9",
     "next": "16.1.1",
     "react": "19.2.3",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-paginate": "^8.3.0",
     "react-select": "^5.10.2",
