--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "modern-normalize": "^3.0.1",
     "next": "16.1.1",
     "react": "19.2.3",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-paginate": "^8.3.0",
     "react-select": "^5.10.2",
