--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie": "^1.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.9",
+    "lucide-react": "^0.562.0",
     "modern-normalize": "^3.0.1",
     "next": "16.1.1",
     "react": "19.2.3",
