--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "formik": "^2.4.9",
     "modern-normalize": "^3.0.1",
     "next": "16.1.1",
-    "react": "19.2.3",
+    "react": "^19.2.3",
     "react-datepicker": "^9.1.0",
-    "react-dom": "19.2.3",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-paginate": "^8.3.0",
     "react-select": "^5.10.2",
@@ -31,8 +31,8 @@
     "@eslint/eslintrc": "^3.3.3",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "babel-plugin-react-compiler": "1.0.0",
     "chalk": "^5.6.2",
     "chokidar": "^5.0.0",
