--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.9",
+    "lucide-react": "^0.562.0",
     "modern-normalize": "^3.0.1",
     "next": "16.1.1",
     "react": "19.2.3",
