--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-select": "^5.10.2",
     "use-debounce": "^10.0.6",
