--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.9",
     "lucide-react": "^0.562.0",
     "modern-normalize": "^3.0.1",
